--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "router": "^1.3.5"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node index.js"
+    
   },
   "eslintConfig": {
     "extends": "react-app"
