--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "signinapi",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@google-cloud/firestore": "4.1.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,8 +22,7 @@
     "router": "^1.3.5"
   },
   "scripts": {
-    "start": "node index.js"
-    
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "eslintConfig": {
     "extends": "react-app"
