--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "signinapi",
+  "name": "apirepo",
   "version": "0.1.0",
   "private": true,
-  "main": "index.js",
   "dependencies": {
     "@google-cloud/firestore": "4.1.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -22,7 +21,7 @@
     "router": "^1.3.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
